[project]
name = "zm14"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yuka32668", email = "yuka32668@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.16.0",
]

[project.scripts]
zm14 = "zm14.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
